# FW-1.0-ESP32-BLE-Mesh

./: .gitignore  README.md
sensor_server/: CMakeLists.txt  callgraph.txt  find_unused.sh  sdkconfig  sdkconfig.old  send.py  simple_check.sh
sensor_server/ble_mesh_ecolumiere/: ble_mesh_ecolumiere.c  ble_mesh_ecolumiere.h  note sui commenti.txt  prova.c
sensor_server/ecolumiere/: config.h  datarecorder.c  datarecorder.h  ecolumiere.c  ecolumiere.h  ecolumiere_system.c  ecolumiere_system.h  lightcode.c  lightcode.h  luxmeter.c  luxmeter.h  pwmcontroller.c  pwmcontroller.h  scheduler.c  scheduler.h  slave_role.c  slave_role.h  storage.c  storage.h  zerocross.c  zerocross.h
sensor_server/main/: CMakeLists.txt  board.c  board.h  main.c
